--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs",
+  "name": "spreadsheet-processor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "eslint": "8.32.0",
+    "@types/node": "18.14.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "4.9.5"
   }
 }
